@@ -21,7 +21,9 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -166,7 +168,13 @@ public class GroupServiceImpl implements GroupService {
         Course course = optionalCourse.get();
 
         List<Long> teacherIds = groupDTO.getTeacherIds();
-        List<Teacher> teachers = teacherIds.stream().map(teacherRepository::getById).collect(Collectors.toList());
+//        List<Teacher> teachers = teacherIds.stream().map(teacherRepository::getById).collect(Collectors.toList());
+
+        List<Teacher> teachers = teacherIds.stream()
+                .map(teacherId -> teacherRepository.findById(teacherId)
+                        .orElseThrow(() -> new ResourceNotFoundException("Teacher", "id", teacherId)))
+                .filter(Objects::nonNull)
+                .toList();
 
         group.setGroupName(groupDTO.getGroupName());
         group.setCourse(course);
